Change title and add footer

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CV</title>
+    <title>My resume</title>
 </head>
 <body>
     <img src="mayank.jpg" alt="Mayank's photo" height="150"/>
@@ -58,6 +58,6 @@
     <a href="contact.html">Contact me<br></a>
     <a href="hobbies.html">Hobbies</a>
     <hr>
-    <p>© Mayank Kapoor. All rights reserved</p>
+    <footer><p>© Mayank Kapoor. All rights reserved</p></footer>
 </body>
 </html>
